cleanup for build, update deps